Fixed overflow issue.

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
 
-
 * {
   margin:0;
   padding:0;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 /* @GROUP TYPOGRAPHY */
@@ -11,7 +14,6 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   color:#333;
-  overflow-x: hidden;
 }
 
 h1 {
